shiftted table to display as box correct but only with just one class

--- a/umlCss.css
+++ b/umlCss.css
@@ -76,5 +76,10 @@ tr{
 
 }
 
+table{
+  cursor: move;
+  padding-left: 10px;
+}
+
 
 
